StringCPA: Fix compilation errors